# CarrascoOrtega-minwage

./: .gitignore  .lintr  Makefile  README.md  pyproject.toml
code/estimate/: Makefile  did-income-ethnic.do  did-income-negoc.do  did-income-zlfn.do  did-wage-deciles.do  did-wage-ethnic.do  did-wage-hli.do  did-wage-indig.do  did-wage-informality.do  did-wage-sector.do  plot-densities.do  plot-event-income-ethnic.do  plot-event-income.do  plot-event-wage-centiles.do  plot-event-wage-ethnic.do  plot-event-wage-hli.do  plot-event-wage-indig.do  read-enighmonth.do  read-enighyear.do  sum-descriptive.do  sum-inequality.R  sum-mapgini.py
code/recompile/: Makefile  aea.bst  biblio.bib  slides.aux  slides.bbl  slides.blg  slides.brf  slides.nav  slides.out  slides.snm  slides.tex  slides.toc  symlink.sh
estimate/code/: Makefile  did-income-negoc.do  did-income-zlfn.do  did-wage-hli.do  did-wage-indig.do  inequality.R  plot-densities.R  plot-event-income.do  plot-event-wage-hli.do  plot-event-wage-indig.do  plot-kernels.do  preliminarydid.R  preliminaryplots.R  read-enighyear.do  sum-descriptive.do  sum-inequality.R  sum-mapgini.py
estimate/input/: gadm41_MEX_1.json
paper/images/: graph.txt
paper/tables/: did-income-ethnic-month.tex  did-income-negoc-month.tex  did-wage-deciles-month.tex  did-wage-deciles-year.tex  did-wage-ethnic-month.tex  did-wage-ethnic-year.tex  did-wage-hli-month.tex  did-wage-indig-month.tex  did-wage-indig-year.tex  sum-descriptive.tex  sum-sector-shares-year.tex
recompile/: Makefile
recompile/code/: slides.tex  symlink.sh
(+15 files in other folders)
