[project]
name = "carrasco-ortega-minwage"
version = "0.1.0"
description = "Minimum Wages and Ethnic Inequality — Carrasco & Ortega"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "geopandas>=0.14",
    "pyreadstat>=1.2",
    "requests>=2.28",
]

[dependency-groups]
dev = []
